[package]
name = "isogame"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
rand = "0.8.5"
